<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.onboardui.FirstOnBoardingFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/top_img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_185sdp"
        android:scaleType="fitXY"
        android:src="@drawable/first_onboarding_img"
        android:layout_marginTop="@dimen/_65sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/onboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voice_translator"
        style="@style/top_onboard_txt"
        app:layout_constraintStart_toStartOf="@+id/top_img"
        app:layout_constraintEnd_toEndOf="@+id/top_img"
        app:layout_constraintTop_toBottomOf="@+id/top_img"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sub_title"
        style="@style/onboardSub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboard_title"
        android:text="@string/seamless_conversations_anytime_anywhere"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/tabview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/first_tabview_img"
        android:layout_marginTop="@dimen/_17sdp"
        app:layout_constraintTop_toBottomOf="@+id/sub_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_started_btn"
        android:layout_width="@dimen/_204sdp"
        android:layout_height="@dimen/_44sdp"
        style="@style/onBoard_btn"
        app:cornerRadius="@dimen/_25sdp"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@+id/tabview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>