<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragment.LanguageFragmentScreen">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/material_toolbar1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_10sdp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/toolbar_backpress_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/arrow_backpress_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_language"
                style="@style/splash_top_heading"
                android:layout_marginStart="@dimen/_8sdp"
                app:layout_constraintStart_toEndOf="@+id/toolbar_backpress_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/toolbar_icon_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/_12ssp"
                android:textColor="#006B7B"
                android:text="@string/done"
                android:src="@drawable/settings_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_39sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:background="@drawable/search_bg"
        android:hint="@string/search_language"
        android:textColor="#A9A9A9"
        android:textSize="@dimen/_11ssp"
        android:drawableEnd="@drawable/search_icon"
        android:paddingHorizontal="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/material_toolbar1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconDrawable="@drawable/search_icon"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_22sdp"
        app:layout_constraintTop_toBottomOf="@+id/search_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>