<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragment.PremiumFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/top_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_230sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:src="@drawable/premium_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/cancel_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_22sdp"
                android:fontFamily="@font/poppins_bold"
                android:maxLines="1"
                android:text="@string/get_full_access"
                android:textColor="#006B7B"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top_img" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pro_translator_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:maxLines="1"
                android:padding="@dimen/_2sdp"
                android:text="@string/translator_pro"
                android:textColor="#555555"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView"
                app:layout_constraintStart_toStartOf="@+id/materialTextView"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/feature_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:maxLines="3"
                android:text="@string/subscribe_to_our_best_premium_plan_to_get_access_to_all_features_and_with_ad_free_experience"
                android:textColor="#252525"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pro_translator_txt" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/year_contraint"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_34sdp"
                android:background="@drawable/premiumcontr_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/feature_txt">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:button="@drawable/custom_checkbox"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/yearly"
                    android:textColor="@color/grad2"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/year_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_18sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/rs_5000_00"
                    android:textColor="#252525"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/recomented"
                android:layout_width="@dimen/_112sdp"
                android:layout_height="@dimen/_18sdp"
                android:background="@drawable/recomented_bg"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/most_recommended"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintBottom_toTopOf="@+id/year_contraint"
                app:layout_constraintEnd_toEndOf="@+id/year_contraint"
                app:layout_constraintStart_toStartOf="@+id/year_contraint"
                app:layout_constraintTop_toTopOf="@+id/year_contraint" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/const_monthly"
                android:layout_width="@dimen/_129sdp"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/premiumcontr_bg"
                app:layout_constraintStart_toStartOf="@+id/year_contraint"
                app:layout_constraintTop_toBottomOf="@+id/year_contraint">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_monthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:button="@drawable/custom_checkbox"
                    android:minWidth="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/monthly_txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_18sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/rs_5000_00"
                    android:textColor="#252525"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintBottom_toTopOf="@+id/monthly_txt2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/checkbox_monthly"
                    app:layout_constraintTop_toTopOf="@+id/checkbox_monthly"
                    app:layout_constraintVertical_chainStyle="packed" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/monthly_txt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_18sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/_1_month"
                    android:textColor="#2B72D5"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/checkbox_monthly"
                    app:layout_constraintEnd_toEndOf="@+id/monthly_txt1"
                    app:layout_constraintStart_toStartOf="@+id/monthly_txt1"
                    app:layout_constraintTop_toBottomOf="@+id/monthly_txt1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/const_6monthly"
                android:layout_width="@dimen/_129sdp"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/premiumcontr_bg"
                app:layout_constraintEnd_toEndOf="@+id/year_contraint"
                app:layout_constraintTop_toBottomOf="@+id/year_contraint">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_6monthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:button="@drawable/custom_checkbox"
                    android:minWidth="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/monthly6_txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_18sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/rs_5000_00"
                    android:textColor="#252525"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintBottom_toTopOf="@+id/monthly6_txt2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/checkbox_6monthly"
                    app:layout_constraintTop_toTopOf="@+id/checkbox_6monthly"
                    app:layout_constraintVertical_chainStyle="packed" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/monthly6_txt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_18sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/_1_month"
                    android:textColor="#2B72D5"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/checkbox_6monthly"
                    app:layout_constraintEnd_toEndOf="@+id/monthly6_txt1"
                    app:layout_constraintStart_toStartOf="@+id/monthly6_txt1"
                    app:layout_constraintTop_toBottomOf="@+id/monthly6_txt1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/continue_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_41sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/recomented_bg"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/continues"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="@+id/year_contraint"
                app:layout_constraintStart_toStartOf="@+id/year_contraint"
                app:layout_constraintTop_toBottomOf="@+id/const_monthly" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/m_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:textSize="10sp"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="#797979"
                app:layout_constraintTop_toBottomOf="@+id/continue_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/you_can_cancel_subscription_anytime_24_hrs_before_renewal_auto_renewal"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_9ssp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginVertical="@dimen/_7sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/m_txt"
                android:text="Cancel Anytime"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>